--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -5,7 +5,7 @@
     <title>Ciggy Butt Basket</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 </head>
@@ -14,8 +14,8 @@
     <h1>Ciggy Butt Basket</h1>
     <div class="container-fluid">
         <div class="row">
-            <div class="col-sm-3"></div>
-            <div class="col-sm-6">
+            <div class="col-sm-2"></div>
+            <div class="col-sm-8">
                 <p>
                     Hello fellow cigar butt addicts,
                 </p>
@@ -26,11 +26,11 @@
                     margins of safety can be provided combined with great returns.
                 </p>
             </div>
-            <div class="col-sm-3"></div>
+            <div class="col-sm-2"></div>
         </div>
         <div class="row">
-            <div class="col-sm-3"></div>
-            <div class="col-sm-6">
+            <div class="col-sm-2"></div>
+            <div class="col-sm-8">
                 <blockquote>
                     <p>
                         If you buy a dollar bill for 60 cents, it’s riskier than if you buy a dollar bill for 40 cents,
@@ -40,7 +40,7 @@
                     <footer>Warren Buffett</footer>
                 </blockquote>
             </div>
-            <div class="col-sm-3"></div>
+            <div class="col-sm-2"></div>
         </div>
     </div>
 
