--- a/bootstrap/netnets.html
+++ b/bootstrap/netnets.html
@@ -11,7 +11,19 @@
 </head>
 
 <body>
-    <h1>Ciggy Butt Basket</h1>
+    <nav class="navbar navbar-default">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <a class="navbar-brand" href="#">Cigar Butt Basket</a>
+            </div>
+            <ul class="nav navbar-nav">
+                <li><a href="index.html">Home</a></li>
+                <li class="active"><a href="netnets.html">Net Nets</a></li>
+                <li><a href="#">Page 2</a></li>
+                <li><a href="#">Page 3</a></li>
+            </ul>
+        </div>
+    </nav>
     <div class="row">
         <div class="col-sm-2"></div>
         <div class="col-sm-8">
