Added the table with net net data.

--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -14,12 +14,12 @@
     <nav class="navbar navbar-default">
         <div class="container-fluid">
             <div class="navbar-header">
-                <a class="navbar-brand" href="#">Cigar Butt Basket</a>
+                <a class="navbar-brand" href="index.html">Cigar Butt Basket</a>
             </div>
             <ul class="nav navbar-nav">
                 <li class="active"><a href="index.html">Home</a></li>
                 <li><a href="netnets.html">Net Nets</a></li>
-                <li><a href="#">Page 2</a></li>
+                <li><a href="about.html">About</a></li>
                 <li><a href="#">Page 3</a></li>
             </ul>
         </div>
