--- a/bootstrap/netnets.html
+++ b/bootstrap/netnets.html
@@ -14,12 +14,12 @@
     <nav class="navbar navbar-default">
         <div class="container-fluid">
             <div class="navbar-header">
-                <a class="navbar-brand" href="#">Cigar Butt Basket</a>
+                <a class="navbar-brand" href="index.html">Cigar Butt Basket</a>
             </div>
             <ul class="nav navbar-nav">
                 <li><a href="index.html">Home</a></li>
                 <li class="active"><a href="netnets.html">Net Nets</a></li>
-                <li><a href="#">Page 2</a></li>
+                <li><a href="about.html">About</a></li>
                 <li><a href="#">Page 3</a></li>
             </ul>
         </div>
@@ -30,26 +30,105 @@
             <table class="table">
                 <thead>
                     <tr>
-                        <th>Firstname</th>
-                        <th>Lastname</th>
-                        <th>Email</th>
+                        <th>Exchange</th>
+                        <th>Ticker</th>
+                        <th>Company Name</th>
+                        <th>PE</th>
+                        <th>% of NCA</th>
+                        <th>% of Cash</th>
+                        <th>CA to Total Liabilities</th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr>
-                        <td>John</td>
-                        <td>Doe</td>
-                        <td>john@example.com</td>
+                        <td>OTC</td>
+                        <td>WEBC</td>
+                        <td>Webco Industries Inc.</td>
+                        <td align="middle">1.00</td>
+                        <td>23.19%</td>
+                        <td> </td>
+                        <td align="middle">1.70</td>
                     </tr>
                     <tr>
-                        <td>Mary</td>
-                        <td>Moe</td>
-                        <td>mary@example.com</td>
+                        <td>SGX</td>
+                        <td>AWE</td>
+                        <td>SP Corporation Limited</td>
+                        <td align="middle">877.50</td>
+                        <td>33.90%</td>
+                        <td>1640.19%</td>
+                        <td align="middle">20.50</td>
                     </tr>
                     <tr>
-                        <td>July</td>
-                        <td>Dooley</td>
-                        <td>july@example.com</td>
+                        <td>TSE</td>
+                        <td>8046</td>
+                        <td>Marufuji Sheet Piling Co. Ltd.</td>
+                        <td align="middle">5.30</td>
+                        <td>42.23%</td>
+                        <td> </td>
+                        <td align="middle">2.20</td>
+                    </tr>
+                    <tr>
+                        <td>SGX</td>
+                        <td>BAZ</td>
+                        <td>Lion Asiapac Limited</td>
+                        <td align="middle"></td>
+                        <td>70.40%</td>
+                        <td> </td>
+                        <td align="middle">1.60</td>
+                    </tr>
+                    <tr>
+                        <td>OTC</td>
+                        <td>JLMC</td>
+                        <td>JLM Couture Inc.</td>
+                        <td align="middle"></td>
+                        <td>45.88%</td>
+                        <td>4771.60%</td>
+                        <td align="middle">3.10</td>
+                    </tr>
+                    <tr>
+                        <td>NASDAQ</td>
+                        <td>TUSK</td>
+                        <td>Mammoth Energy Services Inc.</td>
+                        <td align="middle">1.20</td>
+                        <td>48.11%</td>
+                        <td> </td>
+                        <td align="middle">1.60</td>
+                    </tr>
+                    <tr>
+                        <td>TSE</td>
+                        <td>7887</td>
+                        <td>Nankai Plywood Co. Ltd.</td>
+                        <td align="middle">30</td>
+                        <td>51.02%</td>
+                        <td> </td>
+                        <td align="middle">3.80</td>
+                    </tr>
+                    <tr>
+                        <td>LON</td>
+                        <td>HDT</td>
+                        <td>Holders Technology plc</td>
+                        <td align="middle">13.70</td>
+                        <td>52.63%</td>
+                        <td> </td>
+                        <td align="middle">3.20</td>
+                    </tr>
+                    <tr>
+                        <td>JASDAQ</td>
+                        <td>1793</td>
+                        <td>Ohmoto Gumi Co. Ltd.</td>
+                        <td align="middle">5.10</td>
+                        <td>54.15%</td>
+                        <td> </td>
+                        <td align="middle">2.60</td>
+                    </tr>
+                    <tr>
+                        <td>BIT</td>
+                        <td>IRC</td>
+                        <td>IRCE S.p.A.</td>
+                        <td align="middle">20.20</td>
+                        <td>55.55%</td>
+                        <td> </td>
+                        <td align="middle">1.90</td>
                     </tr>
                 </tbody>
             </table>
