--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -26,11 +26,9 @@
     </nav>
     <div class="container-fluid">
         <div class="row">
-            <div class="col-sm-2"></div>
-            <div class="col-sm-8">
-                <p>
-                    Hello fellow cigar butt addicts,
-                </p>
+            <div class="col-sm-3"></div>
+            <div class="col-sm-6">
+                <h3>Welcome fellow cigar butt addicts,</h3>
                 <p>
                     This website was created in the hope of becoming a valuable resource for actionable net net stock
                     ideas and relevant thoughts on the topic. 50 cent dollars remains the backbone of value investing,
@@ -38,11 +36,11 @@
                     margins of safety can be provided combined with great returns.
                 </p>
             </div>
-            <div class="col-sm-2"></div>
+            <div class="col-sm-3"></div>
         </div>
         <div class="row">
-            <div class="col-sm-2"></div>
-            <div class="col-sm-8">
+            <div class="col-sm-3"></div>
+            <div class="col-sm-6">
                 <blockquote>
                     <p>
                         If you buy a dollar bill for 60 cents, it’s riskier than if you buy a dollar bill for 40 cents,
@@ -52,7 +50,7 @@
                     <footer>Warren Buffett</footer>
                 </blockquote>
             </div>
-            <div class="col-sm-2"></div>
+            <div class="col-sm-3"></div>
         </div>
     </div>
 
