Added write ups page.

--- a/bootstrap/about.html
+++ b/bootstrap/about.html
@@ -19,8 +19,8 @@
             <ul class="nav navbar-nav">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="netnets.html">Net Nets</a></li>
+                <li><a href="writeups.html">Write Ups</a></li>
                 <li class="active"><a href="about.html">About</a></li>
-                <li><a href="#">Page 3</a></li>
             </ul>
         </div>
     </nav>
