--- a/bootstrap/writeups.html
+++ b/bootstrap/writeups.html
@@ -17,9 +17,9 @@
                 <a class="navbar-brand" href="index.html">Cigar Butt Basket</a>
             </div>
             <ul class="nav navbar-nav">
-                <li class="active"><a href="index.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="netnets.html">Net Nets</a></li>
-                <li><a href="writeups.html">Write Ups</a></li>
+                <li class="active"><a href="writeups.html">Write Ups</a></li>
                 <li><a href="about.html">About</a></li>
             </ul>
         </div>
@@ -28,27 +28,7 @@
         <div class="row">
             <div class="col-sm-3"></div>
             <div class="col-sm-6">
-                <h3>Welcome fellow cigar butt addicts,</h3>
-                <p>
-                    This website was created in the hope of becoming a valuable resource for actionable net net stock
-                    ideas and relevant thoughts on the topic. 50 cent dollars remains the backbone of value investing,
-                    and net net stocks provide the most concrete way of achieving this feat. With simple metrics, large
-                    margins of safety can be provided combined with great returns.
-                </p>
-            </div>
-            <div class="col-sm-3"></div>
-        </div>
-        <div class="row">
-            <div class="col-sm-3"></div>
-            <div class="col-sm-6">
-                <blockquote>
-                    <p>
-                        If you buy a dollar bill for 60 cents, it’s riskier than if you buy a dollar bill for 40 cents,
-                        but the expectation of reward is greater in the latter case. The greater the potential for
-                        reward in the value portfolio, the less risk there is.
-                    </p>
-                    <footer>Warren Buffett</footer>
-                </blockquote>
+
             </div>
             <div class="col-sm-3"></div>
         </div>
