Change website name and added write up to Net Net page.

--- a/bootstrap/netnets.html
+++ b/bootstrap/netnets.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Ciggy Butt Basket</title>
+    <title>Net Net Basket</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style.css">
@@ -14,7 +14,7 @@
     <nav class="navbar navbar-default">
         <div class="container-fluid">
             <div class="navbar-header">
-                <a class="navbar-brand" href="index.html">Cigar Butt Basket</a>
+                <a class="navbar-brand" href="index.html">Net Net Basket</a>
             </div>
             <ul class="nav navbar-nav">
                 <li><a href="index.html">Home</a></li>
@@ -27,6 +27,14 @@
     <div class="row">
         <div class="col-sm-2"></div>
         <div class="col-sm-8">
+            <h3>Ten Net Net Stocks</h3>
+            <p>
+                As a young person myself I understand that spending money to get started with something is not always
+                feasible. For this reason, I decided it would be only right to include some free cigar butt ideas. I
+                will be rotating these every 3 months by choosing a random selection from my database.
+
+                If you are interested in a Netflix subscription that will make you money, check out my offering.
+            </p>
             <table class="table">
                 <thead>
                     <tr>
