--- a/bootstrap/about.html
+++ b/bootstrap/about.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Ciggy Butt Basket</title>
+    <title>Net Net Basket</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style.css">
@@ -14,7 +14,7 @@
     <nav class="navbar navbar-default">
         <div class="container-fluid">
             <div class="navbar-header">
-                <a class="navbar-brand" href="index.html">Cigar Butt Basket</a>
+                <a class="navbar-brand" href="index.html">Net Net Basket</a>
             </div>
             <ul class="nav navbar-nav">
                 <li><a href="index.html">Home</a></li>
@@ -27,12 +27,14 @@
     <div class="row">
         <div class="col-sm-3"></div>
         <div class="col-sm-6">
+            <h3>About Me</h3>
             <p>
                 My name is Zane Hutchison and I'm an 18-year-old from Australia and am currently studying a Bachelor of
                 Computer Science. I’ve been investing my own money since February 2019 and have been trying to compound
                 my knowledge along with my money ever since then. Net net investing appeals to me due to its clear-cut
                 criteria, wide margins of safety and fantastic returns.
             </p>
+            <h3>Why I Created this Website</h3>
             <p>
                 The main issue with worthwhile net nets… actually finding them. On my net net journey, I found myself
                 spending many hours grinding through a multitude of resources and collecting relevant data in search of
@@ -41,8 +43,8 @@
             </p>
             <p>
                 My experience with net net screening sites is unsatisfactory to say the least. The data is outdated, the
-                options are limited, and a lot of the hidden gems are missing (well they are hidden I guess). For this
-                reason, I decided that at a reasonable price I could leverage the data I have collected to provide a
+                options are limited, and a lot of great net net stocks are missing. For this reason, I decided that at a
+                reasonable price I could leverage the data I have collected to provide a
                 quality service for fellow net net investors.
             </p>
         </div>
