--- a/bootstrap/writeups.html
+++ b/bootstrap/writeups.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Ciggy Butt Basket</title>
+    <title>Net Net Basket</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style.css">
@@ -14,7 +14,7 @@
     <nav class="navbar navbar-default">
         <div class="container-fluid">
             <div class="navbar-header">
-                <a class="navbar-brand" href="index.html">Cigar Butt Basket</a>
+                <a class="navbar-brand" href="index.html">Net Net Basket</a>
             </div>
             <ul class="nav navbar-nav">
                 <li><a href="index.html">Home</a></li>
