Changed some write-ups.

--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -19,28 +19,23 @@
             <ul class="nav navbar-nav">
                 <li class="active"><a href="index.html">Home</a></li>
                 <li><a href="netnets.html">Net Nets</a></li>
-                <li><a href="writeups.html">Write Ups</a></li>
+                <li><a href="writeups.html">Write-Ups</a></li>
                 <li><a href="about.html">About</a></li>
             </ul>
         </div>
     </nav>
     <div class="container-fluid">
         <div class="row">
-            <div class="col-sm-3"></div>
+            <div class="col-sm-2"></div>
             <div class="col-sm-6">
                 <h3>Welcome fellow cigar butt addicts,</h3>
                 <p>
-                    This website was created in the hope of becoming a valuable resource for actionable net net stock
-                    ideas and relevant thoughts on the topic. 50 cent dollars remains the backbone of value investing,
-                    and net net stocks provide the most concrete way of achieving this feat. With simple metrics, large
-                    margins of safety can be provided combined with great returns.
+                    Follow me on my net net journey as I share with you the wins, losses and lessons I experience along
+                    the way. Check out this quarter's ten actionable net net ideas, or even take a look at my offerings
+                    for monthly net net data. Want to know more? Have a read of the about page and even feel free to
+                    contact me directly as I'd love to have a chat. I'm constantly trying to improve the page so let me
+                    know if you have any suggestions.
                 </p>
-            </div>
-            <div class="col-sm-3"></div>
-        </div>
-        <div class="row">
-            <div class="col-sm-3"></div>
-            <div class="col-sm-6">
                 <blockquote>
                     <p>
                         If you buy a dollar bill for 60 cents, it’s riskier than if you buy a dollar bill for 40 cents,
@@ -50,7 +45,8 @@
                     <footer>Warren Buffett</footer>
                 </blockquote>
             </div>
-            <div class="col-sm-3"></div>
+            <div class="col-sm-2"></div>
+            <div class="col-sm-2"></div>
         </div>
     </div>
 
