--- a/bootstrap/netnets.html
+++ b/bootstrap/netnets.html
@@ -19,7 +19,7 @@
             <ul class="nav navbar-nav">
                 <li><a href="index.html">Home</a></li>
                 <li class="active"><a href="netnets.html">Net Nets</a></li>
-                <li><a href="writeups.html">Write Ups</a></li>
+                <li><a href="writeups.html">Write-Ups</a></li>
                 <li><a href="about.html">About</a></li>
             </ul>
         </div>
@@ -29,11 +29,9 @@
         <div class="col-sm-8">
             <h3>Ten Net Net Stocks</h3>
             <p>
-                As a young person myself I understand that spending money to get started with something is not always
-                feasible. For this reason, I decided it would be only right to include some free cigar butt ideas. I
-                will be rotating these every 3 months by choosing a random selection from my database.
-
-                If you are interested in a Netflix subscription that will make you money, check out my offering.
+                Here are ten randomly selected net net stocks from my database. This page will be updated every three
+                months with another ten randomly selected net net stocks, but if you want access to the whole database
+                plus a curated shortlist check it out here.
             </p>
             <table class="table">
                 <thead>
