--- a/bootstrap/writeups.html
+++ b/bootstrap/writeups.html
@@ -19,7 +19,7 @@
             <ul class="nav navbar-nav">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="netnets.html">Net Nets</a></li>
-                <li class="active"><a href="writeups.html">Write Ups</a></li>
+                <li class="active"><a href="writeups.html">Write-Ups</a></li>
                 <li><a href="about.html">About</a></li>
             </ul>
         </div>
