Added finalised write-ups and a footer.

--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -30,24 +30,24 @@
             <div class="col-sm-6">
                 <h3>Welcome fellow cigar butt addicts,</h3>
                 <p>
-                    Follow me on my net net journey as I share with you the wins, losses and lessons I experience along
-                    the way. Check out this quarter's ten actionable net net ideas, or even take a look at my offerings
-                    for monthly net net data. Want to know more? Have a read of the about page and even feel free to
-                    contact me directly as I'd love to have a chat. I'm constantly trying to improve the page so let me
-                    know if you have any suggestions.
+                    I’ll be posting meaningful content on the topic of net net investing; academic studies, examples and
+                    my own experiences. Along with this I’ll be offering a monthly data subscription which includes
+                    updated financials for 200+ net net stocks from a multitude of countries. Click here to get this
+                    quarter’s ten free stock ideas.
                 </p>
-                <blockquote>
-                    <p>
-                        If you buy a dollar bill for 60 cents, it’s riskier than if you buy a dollar bill for 40 cents,
-                        but the expectation of reward is greater in the latter case. The greater the potential for
-                        reward in the value portfolio, the less risk there is.
-                    </p>
-                    <footer>Warren Buffett</footer>
-                </blockquote>
+                <p>
+                    If you’re reading this thinking “I’m not even an addict, what’s this guy on about?” then check
+                    out my write-up on the basics of net net investing. It’ll take you through the paces of what a
+                    net net is, why this strategy is so enticing for small investors, and where to look for them.
+                    Trust me, it’s worth it.
+                </p>
             </div>
             <div class="col-sm-2"></div>
             <div class="col-sm-2"></div>
         </div>
+    </div>
+    <div class="footer">
+        <p>Footer</p>
     </div>
 
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
