--- a/bootstrap/netnets.html
+++ b/bootstrap/netnets.html
@@ -29,9 +29,10 @@
         <div class="col-sm-8">
             <h3>Ten Net Net Stocks</h3>
             <p>
-                Here are ten randomly selected net net stocks from my database. This page will be updated every three
-                months with another ten randomly selected net net stocks, but if you want access to the whole database
-                plus a curated shortlist check it out here.
+                Everybody loves a freebie, but don’t ask for the Ferrari. If you want access to the rest of the
+                database, consider investing in a subscription to my monthly net net data. This includes 200+ stocks
+                from a multitude of countries including the USA, Australia, Japan, the UK and more. These have all been
+                identified as companies with real businesses and not just some biotech bust. Click here to get access.
             </p>
             <table class="table">
                 <thead>
