Unsuccessfully attempted to amend footer.

--- a/bootstrap/netnets.html
+++ b/bootstrap/netnets.html
@@ -141,6 +141,17 @@
             </table>
         </div>
         <div class="col-sm-2"></div>
+        <footer id="footer">
+            <div class="col-sm-3"></div>
+            <div class="col-sm-6">
+                <p><i>
+                        Disclaimer: None of what is discussed on this website should be taken as financial advice. I am
+                        not
+                        a financial advisor nor have the experience required.
+                    </i></p>
+            </div>
+            <div class="col-sm-3"></div>
+        </footer>
     </div>
 
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
