--- a/bootstrap/writeups.html
+++ b/bootstrap/writeups.html
@@ -24,7 +24,7 @@
             </ul>
         </div>
     </nav>
-    <div class="container-fluid">
+    <div class="page-container">
         <div class="row">
             <div class="col-sm-3"></div>
             <div class="col-sm-6">
@@ -32,8 +32,18 @@
             </div>
             <div class="col-sm-3"></div>
         </div>
+        <footer id="footer">
+            <div class="col-sm-3"></div>
+            <div class="col-sm-6">
+                <p><i>
+                        Disclaimer: None of what is discussed on this website should be taken as financial advice. I am
+                        not
+                        a financial advisor nor have the experience required.
+                    </i></p>
+            </div>
+            <div class="col-sm-3"></div>
+        </footer>
     </div>
-
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
