--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -24,9 +24,9 @@
             </ul>
         </div>
     </nav>
-    <div class="container-fluid">
+    <div class="page-container">
         <div class="row">
-            <div class="col-sm-2"></div>
+            <div class="col-sm-3"></div>
             <div class="col-sm-6">
                 <h3>Welcome fellow cigar butt addicts,</h3>
                 <p>
@@ -42,12 +42,22 @@
                     Trust me, it’s worth it.
                 </p>
             </div>
-            <div class="col-sm-2"></div>
-            <div class="col-sm-2"></div>
+            <div class="col-sm-3"></div>
         </div>
-    </div>
-    <div class="footer">
-        <p>Footer</p>
+        <footer id="footer">
+            <div class="row">
+                <div class="col-sm-3"></div>
+                <div class="col-sm-6">
+                    <p><i>
+                            Disclaimer: None of what is discussed on this website should be taken as financial advice. I
+                            am
+                            not
+                            a financial advisor nor have the experience required.
+                        </i></p>
+                </div>
+                <div class="col-sm-3"></div>
+            </div>
+        </footer>
     </div>
 
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
